# nba_data

./: .gitignore  CLAUDE.md  Makefile  README.md  dl.py  pyproject.toml
.github/workflows/: dl.yml  gh-pages.yml  nbastats.yml
data/: gamelog_2010.parquet  gamelog_2011.parquet  gamelog_2012.parquet  gamelog_2013.parquet  gamelog_2014.parquet  gamelog_2015.parquet  gamelog_2016.parquet  gamelog_2017.parquet  gamelog_2018.parquet  gamelog_2019.parquet  gamelog_2020.parquet  gamelog_2021.parquet  gamelog_2022.parquet  gamelog_2023.parquet  gamelog_2024.parquet  gamelog_2025.parquet  gamelog_2026.parquet  gamelogs.parquet  metadata.json  player_game_logs.parquet  playerlog_2010.parquet  playerlog_2011.parquet  playerlog_2012.parquet  playerlog_2013.parquet  playerlog_2014.parquet  playerlog_2015.parquet  playerlog_2016.parquet  playerlog_2017.parquet  playerlog_2018.parquet  playerlog_2019.parquet  playerlog_2020.parquet  playerlog_2021.parquet  playerlog_2022.parquet  playerlog_2023.parquet  playerlog_2024.parquet  playerlog_2025.parquet  playerlog_2026.parquet  players_2010.parquet  players_2010_playoffs.parquet  players_2011.parquet  (+68 more)
data/espn/: four_factors.parquet  player_details.parquet  team_box.parquet
docs/: DATA_DICTIONARY.md
src/: backfill_player_details.py  dl.py  espn.py  stats.py
tests/: capture_responses.py  conftest.py  test_dl.py  test_download_gamelogs.py  test_stats.py
tests/fixtures/: 2pt_shots.parquet  bio_stats.parquet  player_stats_Advanced_Totals.parquet  player_stats_Base_Per100Possessions.parquet  (+7 more)
viz/: efficiency_sketches.html
(+2074 files in other folders)
