[project]
name = "nba-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.18",
    "fastparquet>=2024.5.0",
    "nba-api>=1.6.0",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "pytest>=8.3.4",
]

[tool.pytest]
pythonpath = ["src", "."]
testpaths = ["tests"]
